--- a/src/app/delegates/delegates.page.scss
+++ b/src/app/delegates/delegates.page.scss
@@ -124,7 +124,7 @@ ion-toolbar {
 
     .user-list {
       margin-top: 10px;
-      height: 225px;
+      height: 330px;
       overflow: auto;
       padding-bottom: 15px;
 
@@ -185,18 +185,18 @@ ion-toolbar {
 
 .profile-overlay {
   position: fixed;
-  top: 19%;
+  top: 25%;
   right: 0;
   width: 100%;
   max-width: 450px;
   height: 100%;
   max-height: 100vh;
-  background: #111;
+  background: #000000;
   z-index: 9999;
   padding: 20px;
-  box-shadow: -2px 0 15px rgba(0, 255, 100, 0.3);
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  // box-shadow: -2px 0 15px rgba(0, 255, 100, 0.3);
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
   overflow-y: auto;
   animation: slideIn 0.3s ease-in-out;
 
