--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -107,11 +107,11 @@
         </ion-card>
         <ion-card class="card" (click)="navigate('/home/badge')">
           <ion-icon name="ribbon-outline" class="caro-icon" ></ion-icon>
-          <p style="padding-top: 6px;">Virtual badge</p>
+          <p>Virtual badge</p>
         </ion-card>
         <ion-card class="card" (click)="navigate('/home/chat')">
           <ion-icon name="globe-outline" class="caro-icon"></ion-icon>
-          <p style="padding-top: 6px;">Networking </p>
+          <p>Networking </p>
         </ion-card>
         <ion-card class="card" (click)="updateFeedback()">
           <!-- <ion-icon name="chatbox-ellipses-outline"></ion-icon> -->
