--- a/src/app/accommodation/accommodation.page.scss
+++ b/src/app/accommodation/accommodation.page.scss
@@ -171,9 +171,10 @@ ion-toolbar {
 
       .distance-info {
         display: flex;
-        flex-direction: column;
-        gap: 4px;
-        margin: 12px 0;
+    flex-direction: row;
+    gap: 4px;
+    margin: 12px 0;
+    justify-content: space-between;
 
         p {
           display: flex;
@@ -181,6 +182,7 @@ ion-toolbar {
           gap: 6px;
           font-size: 0.9rem;
           color: #bbb;
+          font-weight: 700;
 
           ion-icon {
             color: #97C93C;
