--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,8 +1,5 @@
-
 <ion-header>
   <ion-toolbar style="--background: #00000000; --ion-toolbar-background: #00000000; color: #fff;">
-    
- 
     <div class="toolbar-left">
       <ion-button fill="clear" (click)="goBack()" slot="start">
         <ion-icon name="chevron-back-outline"></ion-icon>
@@ -10,13 +7,11 @@
       <span class="page-title">Profile</span>
     </div>
 
-   
     <ion-buttons slot="end">
       <ion-button fill="clear">
         <!-- <ion-icon name="notifications-outline"></ion-icon> -->
       </ion-button>
     </ion-buttons>
-
   </ion-toolbar>
 </ion-header>
 
@@ -40,6 +35,7 @@
       <ion-label>Email</ion-label>
       <ion-note slot="end">{{ user.email || '—' }}</ion-note>
     </ion-item>
+
     <ion-item>
       <ion-label>Mobile</ion-label>
       <ion-note slot="end">{{ user.mobile || '—' }}</ion-note>
@@ -59,6 +55,16 @@
       <ion-label>Workshop</ion-label>
       <ion-note slot="end">{{ user.workshop || '—' }}</ion-note>
     </ion-item>
+
+ 
   </ion-list>
+   <!--Logout-->
+  <div class="logout-box">
+    <ion-button expand="block" fill="solid" color="danger" (click)="logout()">
+      <ion-icon name="log-out-outline" slot="start"></ion-icon>
+      Logout
+    </ion-button>
+  </div>
+  
 
 </ion-content>
