--- a/src/app/schedule/schedule.page.scss
+++ b/src/app/schedule/schedule.page.scss
@@ -206,7 +206,7 @@ ion-toolbar {
         background-color: #dcfd9e !important;
         color: #000000 !important;
         font-weight: bold;
-        border-radius: 25px;
+        border-radius: 12px;
         text-align: center;
         margin-bottom: 8px;
 
@@ -216,11 +216,11 @@ ion-toolbar {
         }
       }
 
-      /* NORMAL SESSION & ACCORDION */
+      /*ACCORDION */
       ion-accordion,
       .simple-session {
         background-color: #dbdbdb;
-        border-radius: 25px;
+        border-radius: 12px;
         overflow: hidden;
         margin-bottom: 8px;
         transition: all 0.3s ease-in-out;
