--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -153,7 +153,7 @@ ion-toolbar {
       }
     }
 
-    /* 🔹 Logout Button Special Styling */
+    /*  Logout Button */
     .logout-item {
       --background: #ffebeb;
       --border-radius: 14px;
