--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -148,8 +148,9 @@
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
-    gap: 0.5rem;
-    padding: 0.3rem 1rem 1rem;
+    gap: 0.2rem;
+    // padding: 0.3rem 1rem 1rem;
+    padding: 0.3rem .2rem 1rem;
     margin-bottom: 0.5rem;
     scroll-behavior: smooth;
 
@@ -161,7 +162,7 @@
       scroll-snap-align: start;
       min-width: 100%;
       max-width: 100%;
-      height: 130px;
+      height: 135px;
       flex-shrink: 0;
       background-image: url('/assets/caro-bg.png');
       background-repeat: no-repeat;
@@ -290,8 +291,22 @@
       padding: 20px;
     }
     .carousel .card {
-      min-width: 31%;
-      max-width: 31%;
+      min-width: 32%;
+      max-width: 32%;
+    }
+  }
+}
+@media (max-width: 1280px) {
+  .conference-page {
+    .header h2 {
+      font-size: 1.4rem;
+    }
+    .main-content-container {
+      padding: 20px;
+    }
+    .carousel .card {
+      min-width: 23%;
+      max-width: 23%;
     }
   }
 }
@@ -318,8 +333,14 @@
     }
 
     .carousel .card {
-      min-width: 49%;
-      max-width: 49%;
+      min-width: 30%;
+      max-width: 30%;
+    }
+  }
+  @media (max-width: 1280px) { 
+.carousel .card {
+      min-width: 10%;
+      max-width: 10%;
     }
   }
 
@@ -342,8 +363,8 @@
     }
 
     .carousel .card {
-      min-width: 48%;
-      max-width: 48%;
+      min-width: 45%;
+      max-width: 45%;
       padding: .9rem;
 
       ion-icon,
@@ -355,7 +376,7 @@
 
       p {
         font-size: 0.9rem;
-        white-space: nowrap;
+        
       }
     }
   }
