updated latest design changes

--- a/src/app/notification/notification.page.scss
+++ b/src/app/notification/notification.page.scss
@@ -219,6 +219,7 @@ ion-toolbar {
 @media screen and (max-width: 480px) {
   .section-title {
     font-size: 1.2rem;
+    text-align: center;
   }
   .note-title {
     font-size: 0.95rem;
