--- a/src/app/badge/badge.page.scss
+++ b/src/app/badge/badge.page.scss
@@ -41,6 +41,7 @@ ion-toolbar {
     color: #97C93C;
     font-size: 16px;
     font-weight: 600;
+    text-shadow: 0 0 6px #97C93C;
     margin: 0 auto;
   }
 }
