--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -19,6 +19,7 @@ ion-toolbar {
     font-size: 20px;
     padding-left: 8px;
     text-align: left;
+    text-shadow: 0 0 6px #97C93C;
   }
 
   ion-icon {
@@ -283,7 +284,7 @@ ion-toolbar {
 @media (max-width: 480px) {
   .user-list {
     margin-top: 10px;
-    height: 225px;
+    height: 300px;
     overflow-x: auto;
     padding-bottom: 45px;
   }
