--- a/src/app/shuttle-service/shuttle-service.page.scss
+++ b/src/app/shuttle-service/shuttle-service.page.scss
@@ -36,7 +36,7 @@ ion-toolbar {
     font-size: 16px;
     font-weight: 600;
     margin: 0 auto;
-    text-shadow: 0 0 6px rgba(151, 201, 60, 0.6);
+   text-shadow: 0 0 6px #97C93C;
   }
 }
 
