updated userchat top padding

--- a/src/app/chatpage/userchat.page.scss
+++ b/src/app/chatpage/userchat.page.scss
@@ -14,6 +14,7 @@ ion-header ion-toolbar {
   animation: fadeInDown 0.5s ease;
   display: flex;
   align-items: center;
+  padding-top: 5%;
 
   ion-avatar {
     width: 40px;
