updated feedback and generic feedback

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -116,7 +116,12 @@
         <ion-card class="card" (click)="updateFeedback()">
           <!-- <ion-icon name="chatbox-ellipses-outline"></ion-icon> -->
           <img src="assets/icon/feedback.svg" class="caro-icon">
-          <p>Feedback</p>
+          <p>Session feedback</p>
+        </ion-card>
+        <ion-card class="card" (click)="navigate('/home/genericfeedback')">
+          <!-- <ion-icon name="chatbox-ellipses-outline"></ion-icon> -->
+          <img src="assets/icon/feedback.svg" class="caro-icon">
+          <p>Conference feedback</p>
         </ion-card>
       </div>
     </div>
