--- a/src/app/chatpage/userchat.page.html
+++ b/src/app/chatpage/userchat.page.html
@@ -15,13 +15,13 @@
 
 <ion-content class="c0c0n-page">
   <div class="main-content-container internal-page">
-    <div class="section"> 
+    <div class="section chat-section"> 
       <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5" pullMin="100" pullMax="200">
         <ion-refresher-content pullingIcon="arrow-down" refreshingSpinner="crescent">
         </ion-refresher-content>
       </ion-refresher>
 
-      <div class="chat-content">
+      <div #chatContent class="chat-content">
         <div class="chat-wrapper">
           <div *ngFor="let group of groupedMessages" class="message-group">
             <div class="date-divider">
