--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -84,10 +84,39 @@ ion-toolbar {
       gap: 10px;
       flex-wrap: nowrap;
 
-      ion-toggle {
-        transform: scale(1.2);
-        margin: 0;
-      }
+     ion-toggle {
+  --handle-width: 24px;
+  --handle-height: 24px;
+  --handle-border-radius: 50%;
+  --background: #555;
+  --background-checked: linear-gradient(90deg, #2dd55b, #51ff00);
+  --handle-background: #fff;
+  --handle-background-checked: #000;
+  --handle-box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
+  --transition: all 0.3s ease;
+
+  width: 52px;
+  height: 28px;
+  border-radius: 50px;
+  position: relative;
+  border: 2px solid #2dd55b;
+  box-shadow: 0 0 8px rgba(45, 213, 91, 0.5);
+  transform: scale(1.15);
+  cursor: pointer;
+  margin: 6px auto;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    box-shadow: 0 0 15px #2dd55b;
+    transform: scale(1.2);
+  }
+
+  &.toggle-checked {
+    border-color: #2dd55b;
+    box-shadow: 0 0 20px #2dd55b, inset 0 0 10px rgba(45, 213, 91, 0.4);
+  }
+}
+
 
       .linkedin-btn {
   display: flex;
